# power-grid-model-io

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_GOVERNANCE.md  README.md  RELEASE.md  REUSE.toml  SUPPORT.md  dco_check.txt  dco_detailed_report.txt  debug_import.py  import_diagnostic.txt  pyproject.toml  set_pypi_version.py  setup.py  sonar-project.properties  test_collect_output.txt  test_collect_output_2.txt  test_collect_output_3.txt  test_collect_output_4.txt  test_collect_output_5.txt  test_collect_output_6.txt
.github/: dco.yml  dependabot.yml
.github/workflows/: build-and-sonar.yml  build-test-and-sonar.yml  build-test-release.yml  build.yml  check-blocking-labels.yml  check-code-quality.yml  check-labels.yml  check-pr-labels.yml  ci.yml  citations.yml  dco-merge-group.yml  nightly.yml  refresh-lock-and-linter-dependencies.yml  reuse-compliance.yml  sonar.yml
.reuse/: dep5
config/: pandapower.yaml
config/excel/: gaia_en.yaml  vision_en.yaml
data/1os2msr/: input.json
docs/: conf.py  data_store.md  index.md  power_grid_model_io.md
docs/converters/: converter.md  pandapower_converter.md  tabular_converter.md  vision_converter.md
docs/examples/: arrow_example.ipynb  pandapower_example.ipynb  pgm_json_example.ipynb  pp_power_flow.py  print_network_example.ipynb  sim_bench_example.ipynb  vision_example.ipynb  vision_gaia_example.ipynb
docs/examples/data/pandapower/: example_simple_input.json  example_simple_output.json
docs/examples/data/tiny-net/: input.json  params.json.license  sym_output.json
examples/: pgm_conversion.py  pgm_json_conversion.py  pp_power_flow.py  vision_power_flow.py
examples/data/tiny-net/: sym_output.json
sandbox/: vnf_mapping.yaml  vnf_python_converter.py
src/power_grid_model_io/: __init__.py  _enum.py  enum.py  errors.py  exceptions.py
src/power_grid_model_io/cli/: convert.py  validate.py
src/power_grid_model_io/converter_api/: c_converter_api.cpp  c_converter_api.h  f_pgm_converter.h
src/power_grid_model_io/converters/: __init__.py  __init__.py.orig  base_converter.py  base_converter.py.orig  excel_converter.py  f_pgm_converter.cpp  gaia_excel_converter.py  pandapower_converter.py  pandas_converter.py  pgm_converter.py  pgm_json_converter.py  sim_bench_converter.py  tabular_converter.py  tabular_converter.py.orig  vision_excel_converter.py
src/power_grid_model_io/data_stores/: base_data_store.py  csv_dir_store.py  excel_file_store.py  gaia_excel_file_store.py  json_file_store.py  vision_excel_file_store.py
src/power_grid_model_io/data_types/: __init__.py  _data_types.py  tabular_data.py
src/power_grid_model_io/filters/: __init__.py  _filters.py  pandapower.py  phase_to_phase.py
src/power_grid_model_io/functions/: __init__.py  _functions.py  exclude_filters.py  filters.py  phase_to_phase.py
src/power_grid_model_io/mappings/: field_mapping.py  multiplier_mapping.py  tabular_mapping.py  unit_mapping.py  value_mapping.py
src/power_grid_model_io/utils/: auto_id.py  dict.py  download.py  excel_ambiguity_checker.py  filters.py  json.py  modules.py  parsing.py  print_network.py  regex.py  uuid_excel_cvtr.py  zip.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_utils.py  utils.py
tests/data/: pandapower.json
tests/data/config/: dummy_mapping.yaml  mapping.yaml  test_optional_extra_mapping.yaml
tests/data/pandapower/: README.md  pgm_asym_output_data.json  pgm_input_data.json  pgm_input_data.json.license  pgm_input_data_trafo_zero_seq.json  pgm_output_data.json  pp_v2_net_3ph_output_current_loading.json  pp_v2_net_output.json  pp_validation.py
tests/data/vision/: data.xlsx  pgm_input_data_en.json  pgm_input_data_nl.json  vision_97_en.xlsx  vision_9_5_en.yaml  vision_9_5_nl.yaml  vision_9_7_en.yaml  vision_en.xlsx  vision_nl.xlsx  vision_optional_extra_full.xlsx  vision_optional_extra_mapping.yaml  vision_optional_extra_minimal.xlsx  vision_optional_extra_ordering_invariance.yaml  vision_optional_extra_partial.xlsx  vision_validation.json  vision_validation.vnf  vision_validation.vnf.license  vision_validation.xlsx
tests/unit/: conftest.py  test_dummy.py
tests/unit/converters/: __init__.py  test_base_converter.py  test_base_data_converter.py  test_gaia_excel_converter.py  test_mapping_file_existence.py  test_pandapower_converter.py  test_pandapower_converter_input.py  test_pandapower_converter_output.py  test_pgm_converter.py  test_pgm_json_converter.py  test_tabular_converter.py  test_vision_excel_converter.py
tests/unit/data_stores/: __init__.py  test_base_data_store.py  test_csv_dir_store.py  test_excel_data_store.py  test_excel_file_store.py  test_gaia_excel_file_store.py  test_json_file_store.py  test_vision_excel_file_store.py
tests/unit/data_types/: test_data_types.py  test_tabular_data.py
tests/unit/filters/: test_auto_id.py  test_filters.py  test_pandapower.py  test_phase_to_phase.py  test_vision.py
tests/unit/functions/: test_exclude_filters.py  test_filters.py  test_functions.py  test_phase_to_phase.py
tests/unit/mappings/: test_field_mapping.py  test_multiplier_mapping.py  test_tabular_mapping.py  test_unit_mapping.py  test_value_mapping.py
tests/unit/utils/: test_auto_id.py  test_dict.py  test_download.py  test_filters.py  test_json.py  test_modules.py  test_parsing.py  test_print_network.py  test_regex.py  test_uuid_excel_cvtr.py  test_zip.py
tests/validation/: conftest.py  test_test_utils.py  utils.py
tests/validation/converters/: test_pandapower_converter.py  test_pandapower_converter_input.py  test_pandapower_converter_output.py  test_vision_excel_converter.py  test_vision_excel_converter_en.py  test_vision_excel_converter_nl.py
vnfpgmconverter/: .gitmodules  CMakeLists.txt
vnfpgmconverter/dll_helpers/: CMakeLists.txt
vnfpgmconverter/dll_helpers/include/dll_helpers/: import_export_helpers.h  load_helpers.h
vnfpgmconverter/include/: c_converter_api.h  vnf_pgm_converter.h
vnfpgmconverter/src/: c_converter_api.cpp  vnf_pgm_converter.cpp
(+31 files in other folders)
