# SPDX-FileCopyrightText: Contributors to the Power Grid Model project <powergridmodel@lfenergy.org>
#
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = [
    "setuptools", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "power-grid-model-io"
authors = [{name = "Contributors to the Power Grid Model project", email = "powergridmodel@lfenergy.org"}]
description = "Power Grid Model Input/Output"
readme = "README.md"
keywords = ["power grid model", "input/output", "conversions"]
license = {text = "MPL-2.0"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "openpyxl",
    "pandas",
    "power_grid_model>=1.8",
    "pyyaml",
    "structlog",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pandapower>2.11.1",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pydantic>2", # Used in unit tests
    "numba",
]
examples = [
    "power-grid-model>1.9.80",
    "pandapower>2.11.1",
    "pyarrow", # Pyarrow support for Python 3.12 scheduled for 14.0.0: https://github.com/apache/arrow/issues/37880
]
doc = [
    "sphinx",
    "myst-nb",
    "sphinx_rtd_theme",
    "readthedocs-sphinx-search",
    "sphinx-hoverxref",
    "numpydoc",
]

[project.urls]
Home-page = "https://lfenergy.org/projects/power-grid-model/"
GitHub = "https://github.com/PowerGridModel/power-grid-model-io"
Documentation = "https://power-grid-model-io.readthedocs.io/en/stable/"
Mailing-list = "https://lists.lfenergy.org/g/powergridmodel"
Discussion = "https://github.com/orgs/PowerGridModel/discussions"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {file = "PYPI_VERSION"}

[tool.setuptools.package-data]
power_grid_model_io = ["config/**/*.yaml", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = ["--cov=power_grid_model_io", "--cov-report=term", "--cov-report=html:cov_html", "--cov-fail-under=98.5"]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
max-line-length = 120
ignore-paths = [
    "docs/",
    "examples/",
    "tests/",
    "setup.py",
]
disable = [
    "fixme", # allow todos
]
good-names=[
    "ex",   # exception
    "i",    # iterator or current
    "p",    # active power
    "q",    # reactive power
    "s",    # power (p + q)
    "v",    # voltage
]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
non_interactive = true
install_types = true
